# PMMoTo

./: .buildinfo  .clang-format  .coveragerc  .gitignore  .gitmodules  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  README.md  examples.html  genindex.html  index.html  installation.html  modules.html  mypy.ini  objects.inv  pmmoto.analysis.average.html  pmmoto.analysis.bins.html  pmmoto.analysis.html  pmmoto.analysis.minkowski.html  pmmoto.analysis.stats.html  pmmoto.code-workspace  pmmoto.core.communication.html  pmmoto.core.domain.html  pmmoto.core.domain_decompose.html  pmmoto.core.domain_discretization.html  pmmoto.core.html  pmmoto.core.logging.html  pmmoto.core.orientation.html  pmmoto.core.pmmoto.html  pmmoto.core.set.html  pmmoto.core.set_boundary.html  pmmoto.core.sets.html  pmmoto.core.subdomain.html  pmmoto.core.subdomain_features.html  pmmoto.core.subdomain_padded.html  pmmoto.core.subdomain_verlet.html  pmmoto.core.utils.html  pmmoto.core.voxels.html  (+37 more)
PMMoTo/: Domain.py  Orientation.py  Orientation.pyx  __init__.py  communication.py  dataOutput.py  dataRead.py  distance.pyx  domainGeneration.pyx  drainage.pyx  minkowski.py  morphology.py  nodes.pyx  porousMedia.py  set.pyx  sets.pxd  sets.pyx  subDomain.py
_sources/: index.rst.txt  pmmoto.analysis.stats.rst.txt  pmmoto.core.logging.rst.txt  pmmoto.core.set.rst.txt  pmmoto.core.set_boundary.rst.txt  pmmoto.core.sets.rst.txt  pmmoto.core.subdomain_verlet.rst.txt  pmmoto.core.voxels.rst.txt  pmmoto.domain_generation.multiphase.rst.txt  pmmoto.domain_generation.rst.txt  pmmoto.filters.morphological_operators.rst.txt  pmmoto.filters.rst.txt  pmmoto.io.evtk.evtk.rst.txt  pmmoto.io.evtk.rst.txt
api/: modules.html  pmmoto.analysis.html  pmmoto.core.html  pmmoto.domain_generation.html  pmmoto.filters.distance.html  pmmoto.filters.html  pmmoto.html  pmmoto.io.evtk.html  pmmoto.io.html  pmmoto.particles.html
benchmarks/: test_benchmark_connected_components.py  test_benchmark_edt.py  test_benchmark_morphological_operators.py  test_benchmark_porosimetry.py  test_benchmark_porosimetry_inkbottle.py  test_benchmark_porosimetry_random.py
developer_guide/: benchmarking.html  code_of_conduct.html  contributing.html  docker.html  docs.html  index.html  installation.html  python_versions.html  release.html  testing.html  tox.html
docs/: Makefile  conf.py  examples.rst  index.rst  installation.rst  pmmoto.analysis.average.rst  pmmoto.analysis.bins.rst  pmmoto.analysis.minkowski.rst  pmmoto.analysis.rst  pmmoto.core.communication.rst  pmmoto.core.domain.rst  pmmoto.core.domain_decompose.rst  pmmoto.core.domain_discretization.rst  pmmoto.core.orientation.rst  pmmoto.core.pmmoto.rst  pmmoto.core.rst  pmmoto.core.subdomain.rst  pmmoto.core.subdomain_features.rst  pmmoto.core.subdomain_padded.rst  pmmoto.core.utils.rst  pmmoto.domain_generation.domain_generation.rst  pmmoto.domain_generation.lattice_packings.rst  pmmoto.domain_generation.porousmedia.rst  pmmoto.domain_generation.rdf.rst  pmmoto.domain_generation.rst  pmmoto.filters.connected_components.rst  pmmoto.filters.distance.edt.rst  pmmoto.filters.distance.rst  pmmoto.filters.equilibrium_distribution.rst  pmmoto.filters.porosimetry.rst  pmmoto.filters.rst  pmmoto.io.data_read.rst  pmmoto.io.evtk.hl.rst  pmmoto.io.evtk.rst  pmmoto.io.evtk.vtk.rst  pmmoto.io.evtk.xml.rst  pmmoto.io.io_utils.rst  pmmoto.io.output.rst  pmmoto.io.rst  pmmoto.particles.atom_universal_force_field.rst  (+6 more)
examples/: connected_pathways.html  connected_pathways.py  drainage_inkbottle.html  drainage_inkbottle.py  index.html  md_porous_media.html  md_porous_media.py  sphere_pack_psd.html  sphere_pack_psd.py
paper/: paper.bib  paper.md
pmmoto/: __init__.py
profiling/: connected_components_profiling.py  domain_generation_profiling.py  drainage_profiling.py  edt.prof  edt_profiling.py  morphological_operators_profiling.py  profiling_utils.py
scripts/: coverage.sh  docker.sh  make_docs.sh  release.sh  tests.sh  venv.sh
tests/: 1KSP.pvsm  CheckMorphTools.py  Clipped_1K.pvsm  connectedSets_ng.py  connectedSets_water.py  grid_independence.py  pa_analysis.py  single_sphere.py  slurm-5903185.out  slurm-5903476_pack1.out  submit.sh  submit_pack1.sh  test.py  testCADrain.py  testCAInkBottle.py  testCAOpen.py  testDrainImb.py  testInkBottle.py  testMA.py  testOpen.py  testOpen_pack1.py  test_connect_set_single_phase.py  test_connect_sets.py  test_connect_sets_multiphase.py  test_connect_sets_multiphase_parallel.py  test_connect_sets_parallel.py  test_coords.py  test_edt.py  test_edt_parallel.py  test_inkbottle.py  test_lammps_read.py  test_membrane.py  test_minkowski.py  test_morph.py  test_morphology.py  test_morphology_parallel.py  test_opening.py  test_parallel_connect_sets.py  test_parallel_edt.py  (+7 more)
(+439 files in other folders)
