[project]
name = "pmmoto"
version = "0.1.0"
description = "Porous Media Topology and Morphology Toolkit"

authors = [
    {name = "Timothy M. Weigand", email = "timothy.weigand@unc.edu"},
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy<2.0",
    "cython==3.0",
    "mpi4py>=4.0.0",
    "edt>=2.3.1",
    "scipy>=1.9.3",
    "connected_components_3d>=3.12.4",
    "matplotlib>=3.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["src"]
include = ["pmmoto*"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=1.0",
    "tox>=3.24",
    "pytest_benchmark>=5.1.0",
    "ruff>=0.3.0",
    "interrogate>=1.5.0",
    "pytest-mpi @ git+https://github.com/orausch/pytest-mpi.git@master"
]
docs = [
    "sphinx>=7.0",
    "sphinx_rtd_theme",
    "myst-parser"
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "D"]  # E = pycodestyle, F = pyflakes, D = pydocstyle
ignore = ["D107", "D203", "D213"]

[tool.interrogate]
fail-under = 90
ignore-init-method = true
ignore-module = true


